feat(jdk17) target Java 17 and localize fork as MCYAS-IDConverter
Make the artifact runnable on the JDK shipped with Minecraft 1.18+ servers
while still building with the JDK 26 toolchain.

- set options.release to 17 in build.gradle.kts
- make Main.main public: JDK 17's launcher requires it, JDK 25 relaxed it
- replace Math.clamp and the unnamed catch variable with Java 17 equivalents
- rename project, artifacts, log file and javadoc titles to MCYAS-IDConverter
- point the README download link and Java badge at this fork
- ignore the local .codegraph index
- add docs/PRD-mapping-migration.md